<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_bg" >

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/game_over_title"
        android:layout_margin="10dip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image_title"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/dialog_string_score"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dialog_string_best"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/button_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@null"
            android:src="@drawable/button_play_selector"
            android:text="@string/dialog_run" />

        <ImageButton
            android:id="@+id/button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@null"
            android:src="@drawable/button_exit_selector"
            android:text="@string/dialog_exit" />

        <ImageButton
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@null"
            android:src="@drawable/button_rank_selector"
            android:text="@string/dialog_order" />
    </LinearLayout>

</RelativeLayout>